Changed the name of the app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-number-conversion",
+  "name": "little-lemon-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
