--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mantine/core": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
