--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/dates": "^5.10.1",
     "@mantine/form": "^5.10.1",
     "@mantine/hooks": "^5.10.0",
+    "@mantine/notifications": "^5.10.1",
     "@tabler/icons": "^1.119.0",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
